fixing hieght display on mobile

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -77,7 +77,7 @@ html {
 }
 
 body {
-    height: 100dvh;
+    height: 90dvh;
     font-size: var(--fs-normal);
     line-height: 1.4;
 
